governance/baselines/2.1.0/references/19-info-completeness-rules.md
# 项目信息完整性巡检规则

本文件定义 ChronoPM 的项目信息完整性巡检与补全提醒机制。在日常项目管理过程中，AI 持续检查事实源文件中的关键信息是否缺失、过期或冲突，并在信息缺口影响当前任务结论时主动提醒用户补充。

---

## 1. 定位与边界

### 1.1 与 14-self-check-rules.md 的区别

| 维度 | `14-self-check-rules.md` | 本规则（19） |
|------|--------------------------|-------------|
| 定位 | 文档处理后自查 | 项目信息完整性巡检 |
| 时机 | 处理日报、会议纪要、评审记录等文档**之后** | 日常查询、报告、风险分析、计划推导**时** |
| 对象 | 当前刚处理的文档及其提取结果 | 全部事实源文件中的关键字段 |
| 目标 | 确保本次处理没有遗漏、索引一致、关联正确 | 发现影响项目分析和决策的信息缺口 |
| 触发 | 文档处理完成后自动执行 | 条件触发，中提醒策略 |
| 输出 | 自查结果、遗漏项、修正建议 | 缺失项、影响说明、补充建议、是否现在补充 |

**两者互补，不合并。** 14 是"事后质检"，19 是"事前/过程中巡检"。

---

## 2. 触发场景

### 2.1 强触发（必须执行完整性检查）

以下场景必须执行与当前任务相关的完整性检查：

- 生成日报、周报、月报
- 生成项目状态报告
- 分析延期风险
- 分析资源风险
- 分析成本或投入产出
- 推导排期
- 汇总里程碑状态
- 项目集统筹分析
- 导出 Excel/Word/PDF 报告
- 生成/管理待确认变更（确认/驳回/巡检 `pending-changes.md` 中 `Confirmed By: 待确认` 清单的完整性、与 Change Log 的一一对应及 `total_pending` 一致性；以 Change Log 为准）
- 检查 Change Log 活跃区归档阈值（活跃区超 50 行或超 30 天触发按月归档到 `change-log/archive/YYYYMM-change-log.md` 并更新 `change-log/index.md`）

### 2.2 弱触发（只检查与当前问题直接相关的信息）

- 查询单个需求状态
- 查询单个任务进度
- 查询单个资源分配
- 查询单个里程碑状态
- 查询计划进展

### 2.3 不触发

- 用户闲聊
- 用户只要求格式转换
- 用户明确要求"只回答问题，不做检查"
- 用户处于静默模式

---

## 3. 检查维度

### 3.1 合同层

检查文件：`context/project-context.md`, `context/project-brief.md`

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| 合同名称 | 无法形成项目归属和合同口径 | P1 |
| 合同总额 | 无法进行成本、收入、投入产出分析 | P0 |
| 合同类型 | 无法判断交付责任和验收风险 | P2 |
| 合同范围摘要 | 无法判断需求是否超范围 | P1 |
| 立项时间 | 无法判断项目周期起点 | P1 |
| 启动时间 | 无法判断项目真实执行周期 | P1 |
| 计划完工时间 | 无法判断延期风险 | P0 |

### 3.2 项目层

检查文件：`context/project-index.md`, `context/project-brief.md`

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| 子项目名称 | 无法建立项目集结构 | P0 |
| 项目经理 | 无法定位责任人 | P1 |
| 项目状态 | 无法生成准确项目总览 | P1 |
| 优先级 | 无法做项目排序和资源倾斜判断 | P2 |
| 启动日期 | 无法判断项目执行周期 | P1 |
| 计划完成日期 | 无法判断项目延期风险 | P0 |
| 实际完成日期 | 无法判断项目闭环状态（仅对已完成项目） | P2 |
| 依赖关系 | 无法识别跨项目阻塞 | P1 |
| 计划阶段数 | 无法关联 PLAN 文件 | P2 |

### 3.3 计划层

检查文件：`plans/PLAN-NNN-{name}.md`（若已创建；计划概览在 `context/project-brief.md`）

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| PLAN 编号 | 无法与需求、待办、资源建立稳定关联 | P0 |
| 计划名称 | 无法识别计划范围 | P1 |
| 计划开始时间 | 无法推导排期 | P1 |
| 计划结束时间 | 无法判断延期风险 | P0 |
| 需求数 | 无法判断工作量规模 | P1 |
| 需求 ID 列表 | 无法进行精细化需求追踪 | P2 |
| 资源 | 无法判断人力是否覆盖 | P1 |
| 状态 | 无法判断当前进展 | P1 |
| 里程碑型 WP | 无法判断计划与阶段目标的关系 | P2 |

### 3.3a 推导基线

检查文件：`context/entity-registry.md`

| 检查项 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| entity-registry.md 是否存在 | 实体枚举依赖 AI 推断，可能遗漏 | P2（多模块/多阶段项目升级为 P1） |
| 实体清单是否覆盖待办文件中所有模块 | 实体枚举不完整，周报可能遗漏 | P1 |
| “关联任务/需求”列是否填充 | 推导后无法定位受影响任务集，降级到待办文件标题匹配 | P2 |
| "当前状态"列是否与最新日报/纪要一致 | 推导基线过期，推导结论可能不准确 | P2 |

### 3.4 需求层

检查文件：`requirements/requirement-register.md`

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| 需求 ID | 无法追踪 | P0 |
| 需求描述 | 无法评估范围 | P0 |
| 优先级 | 无法排序 | P1 |
| 来源 | 无法判断需求合法性 | P2 |
| 所属计划/WP | 无法统计每个计划/WP 需求量 | P1 |
| 关联任务 | 无法判断需求是否进入执行 | P1 |
| 关联里程碑 | 无法判断需求交付节点 | P2 |
| 开发状态 | 无法判断实现进度 | P1 |
| 测试状态 | 无法判断质量状态 | P1 |
| 验收状态 | 无法判断交付闭环 | P2 |
| 总状态 | 无法生成项目健康度 | P1 |

> **双视图字段巡检（CR-20260815-001，存在性校验非强制必填）**：
> - `实现视图`、`原型/文档链接` 为可选字段（07 号 §8.10），缺失不记为强制项，仅对 **已确认状态 REQ** 统计覆盖率作巡检提示（P3，建议补充），不阻塞巡检结论。
> - `来源` 指向 Canonical ID 的需求，校验 Canonical 存在性；不存在的指针记 P2。
> - 不得将上述两项作为 P0/P1 强制缺失项，避免给存量工作区制造迁移负担。

### 3.5 任务层

检查文件：`todos/{date}/{owner}.md` 待办文件

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| 一级任务 | 无法形成任务结构 | P1 |
| 二级任务 | 无法跟踪执行粒度 | P0 |
| 完成百分比 | 无法生成进度统计 | P1 |
| 负责人 | 无法明确责任 | P1 |
| 计划开始/结束时间 | 无法判断延期 | P0 |
| 状态 | 无法判断执行情况 | P1 |
| 交付物 | 无法判断任务完成标准 | P2 |
| 偏差说明 | 无法解释计划偏差 | P2 |
| 整改措施 | 无法跟踪风险闭环 | P2 |

> **Requirement Ref 存在性巡检（CR-20260815-001）**：Requirement Ref 为 00 号 WF-8 定义的**可选字段，不得变相强制必填**；仅对已填 Requirement Ref 的待办校验其指向的 REQ 在 requirement-register 中存在且未取消，指向不存在的记 P2。需求关联覆盖率仅作统计提示（P3），不作为强制项。

### 3.6 资源层

检查文件：`resources/resource-register.md`

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| 姓名 | 无法识别资源 | P0 |
| 角色 | 无法判断岗位覆盖 | P1 |
| 所属项目 | 无法判断资源归属 | P1 |
| 计划分配 | 无法判断每个计划/WP 资源投入 | P1 |
| 到岗时间 | 无法判断资源可用性 | P1 |
| 离场时间 | 无法判断后续资源风险 | P1 |
| 分配方式 | 无法判断是否专职 | P2 |
| B 角 | 无法判断单点风险 | P2 |
| 风险等级 | 无法识别人力风险 | P2 |
| 特殊技能 | 无法做技能匹配 | P3 |

### 3.7 里程碑层

检查文件：`plans/progress-plan.md`

| 字段 | 缺失影响 | 默认严重程度 |
|------|----------|-------------|
| 里程碑 ID | 无法稳定引用 | P0 |
| 里程碑名称 | 无法识别阶段目标 | P1 |
| 计划日期 | 无法判断阶段排期 | P0 |
| 实际日期 | 无法判断是否按期完成 | P1 |
| 状态 | 无法判断阶段进展 | P1 |
| 交付物 | 无法判断完成内容 | P2 |
| 通过标准 | 无法判断是否真正达成 | P2 |

---

## 4. 严重程度分级

| 等级 | 名称 | 说明 | 提醒策略 |
|------|------|------|----------|
| P0 | 阻塞级 | 缺失后无法完成当前任务 | 必须提醒，说明当前任务无法准确完成 |
| P1 | 高影响 | 可以回答，但结论可靠性明显下降 | 主动提醒，可继续但需标注结论限制 |
| P2 | 中影响 | 不影响当前回答，但影响后续管理质量 | 回答后简短提示，或在巡检报告中列出 |
| P3 | 低影响 | 建议补充，但不主动打断 | 默认不主动提醒，仅在完整性巡检报告中展示 |

### 待确认变更超期分级（主动变更 + 人工确认）

`pending-changes.md`（`Confirmed By: 待确认`）待确认项按等待时长升级提醒，合入 P0-P3：

| 等待时长 | 提醒等级 | 行为 |
|---|---|---|
| 超 7 天未确认 | P1/P2 | 进入日常提醒（每日催办） |
| 超 14 天未确认 | P0/P1 | 升级为 **critical**，较高优先级主动提醒，说明未确认对延期判定/已完成统计的影响 |

### 动态升降级规则

- 如果当前任务涉及的字段缺失（即使是 P2 级别），升一级处理。
- 如果缺失字段在当前任务中完全不涉及，降一级处理。
- 多个 P2 缺失叠加在同一管理域，合并提醒并升为 P1。

---

## 5. 提醒格式

### 5.1 日常提醒模板

```text
我在处理这个问题时发现，当前项目资料中有一些关键信息不完整，会影响本次判断：

- 缺失项：[字段/文件/对象]
- 影响：[会影响什么判断、统计或推导]
- 建议补充：[建议用户补充的具体内容]

你可以现在补充，也可以回复"稍后补充"。
如果你希望本次只处理当前问题、不做完整性提醒，也可以说"本次不要提醒"。
```

### 5.2 多项缺失提醒模板

```markdown
在生成周报前，我发现当前资料有几项关键信息不完整：

| 缺失项 | 影响 | 严重程度 | 建议 |
|---|---|---|---|
| 5 个任务缺少完成百分比 | 会影响本周进度统计准确性 | P1 | 补充完成百分比 |
| M05 里程碑缺少计划日期 | 会影响阶段进度判断 | P0 | 补充计划日期 |
| 3 条高优先级需求未关联计划/WP | 会影响计划范围统计 | P1 | 补充所属计划/WP |

我可以先按现有信息处理，并在"数据不完整说明"中标注限制。
你要现在补充，还是先处理？
```

---

## 6. 用户控制

### 6.1 用户指令

| 用户说 | 效果 |
|--------|------|
| "先不提醒" | 当前这次不提醒，下次恢复 |
| "本次不要检查完整性" | 当前任务跳过完整性检查 |
| "进入静默模式" | 持续不提醒，直到用户退出 |
| "恢复完整性提醒" | 退出静默模式 |
| "给我做一次完整性巡检" | 立即执行全维度巡检并输出报告 |
| "列出当前项目缺失信息清单" | 等同于完整性巡检 |
| "只检查计划层" | 仅检查指定维度 |

### 6.2 静默模式

- 用户说"进入静默模式"后，AI 在当前会话中不再主动提醒。
- 但如果遇到 P0 级缺失且当前任务无法完成，仍必须提示（不可静默）。
- 用户说"恢复完整性提醒"后恢复正常。

---

## 7. 完整性巡检报告

当用户要求巡检或 AI 判断需要输出完整报告时，输出以下格式：

```markdown
# 项目信息完整性巡检报告

## 总体结论

当前项目资料完整度：高 / 中 / 低

主要影响：
- [影响项1]
- [影响项2]

## 缺失信息清单

| 层级 | 对象 | 缺失项 | 影响 | 严重程度 | 建议动作 |
|---|---|---|---|---|---|
| 合同层 | project-context.md | 计划完工时间 | 影响延期判断 | P0 | 立即补充 |
| 计划层 | PLAN 文件（若已创建） | 计划结束时间 | 影响计划排期判断 | P1 | 优先补充 |
| 需求层 | requirement-register.md | 所属计划/WP | 影响需求统计 | P1 | 批量补充 |

## 优先补充建议

建议优先补充：

1. [P0 级缺失项1]
2. [P0 级缺失项2]
3. [P1 级缺失项1]

原因：这些字段会直接影响进度、资源、风险和里程碑判断。
```

---

## 8. 巡检执行规则

### 8.1 检查范围确定

- 强触发：检查与当前任务相关的所有管理域。
- 弱触发：只检查与当前查询直接相关的对象和字段。

### 8.2 检查执行流程

```
用户发起操作
  → AI 判断操作涉及的管理域（合同/项目/计划/需求/待办/资源/里程碑）
  → 读取相关事实源文件
  → 按检查维度表逐字段检查
  → 判断缺失项严重程度（含动态升降级）
  → P0 → 必须提醒，可能阻塞当前任务
  → P1 → 主动提醒，标注结论限制
  → P2 → 回答后简短提示
  → P3 → 不提醒
  → 用户选择补充 / 稍后 / 忽略
  → 如补充，更新对应事实源文件
```

### 8.3 静默状态记录

在 `project-brief.md` front matter 中记录：

```yaml
completeness_status: partial  # high / partial / low
last_completeness_check: "YYYY-MM-DD"
silence_mode: false  # 是否处于静默模式
```

---

## 9. 与其他规则的关联

| 关联规则 | 关系 |
|----------|------|
| `00-pm-main-rules.md` §2.7 | 默认意图检测新增"完整性巡检/补全提醒"意图 |
| `10-update-trigger-rules.md` | 日常更新/查询后增加关联字段完整性检查 |
| `14-self-check-rules.md` | 14 是文档处理后即时质检，19 是日常操作时持续巡检，互补不合并 |
| `18-init-wizard-rules.md` | 向导完成后，日常巡检接管信息完整性持续检查 |
| `05-query-rules.md` | 查询类任务触发弱检查 |
| `01-daily-report-rules.md` | 日报/周报生成触发强检查 |
